--- a/src/components/UI/Form/Form.module.css
+++ b/src/components/UI/Form/Form.module.css
@@ -1,5 +1,6 @@
 .form {
   display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
@@ -20,10 +21,18 @@
 }
 
 .inputs {
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   outline: none;
   padding: 7px 10px;
   border-radius: 4px;
   font-size: 16px;
-  width: 350px;
+  width: 100%;
+}
+
+.error {
+  border: 2px solid red;
+}
+
+.success {
+  border: 2px solid green;
 }
